<resources>
    <string name="app_name">JieJie</string>
    <string name="tab_everyday">Today</string>
    <string name="tab_everymonth">Month</string>
    <string name="tab_monitor">Family</string>
    <string name="tab_setting">Setting</string>
    <string name="menu_settings">Settings</string>
    <string name="title_contacts">Contacts</string>
    <string name="icon_description">jiejie</string>
    <string name="data_app">jiecon</string>
    <string name="findContact">Find person…</string>
    <string name="family_bind_hint">Enter your phone number</string>
    <string name="family_bind_phone">Phone number:</string>
    <string name="family_bind_validate">Validation:</string>
    <string name="family_bind_validate_refresh">Refresh</string>
    <string name="family_bind_validate_get">Get validation</string>
    <string name="family_bind_button_ok">OK</string>
    <string name="family_bind_passed">Success!</string>
    <string name="family_bind_failed">Failed!</string>
    <string name="family_bind_no_friends">Your!</string>
    <string name="family_bind_add">Add</string>
    <string name="contacts_add_as_friend">Add buddy</string>
    <string name="family_bind_invite">Inviate</string>
    <string name="family_bind_added">Added</string>
    <string name="family_bind_empty_contact_list">No contacts!</string>
    <string name="family_detail">See</string>
    <string name="family_cancel">Cancel</string>
    <string name="family_parent">Parents</string>
    <string name="family_kid">Kids</string>
    <string name="family_friend">Friends</string>
    <string name="family_bind_dialog_monitor_title">Hint</string>
    <string name="family_bind_phone_title">Enter phone number</string>
    <string name="family_bind_phone_hint">Enter phone number</string>
    <string name="family_phone_null">Phone number is none</string>
    <string name="family_bind_dialog_no_sim_card">Unrecgonize phone nubmer！</string>
    <string name="family_bind_dialog_monitor_add_exist">This Phone number is exist</string>
    <string name="family_bind_dialog_monitor_add_success">Added successfully</string>
    <string name="family_bind_dialog_monitor_warning">Your buddy have not installed Jiejie,so can not monitor！</string>
    <string name="family_please_check_family_tab_message">Search Family</string>
    <string name="title_activity_test">test</string>
    <string name="action_settings">Setting</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_hint_phone_number">Phone number</string>
    <string name="OK">OK</string>
    <string name="Reply">Replay</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="AGREE">Agree</string>
    <string name="DISAGREE">Refuse</string>
    <string name="WAITMONMENT">Waiting</string>
    <string name="CANCEL">Cancel</string>
    <string name="title_activity_main_activity2">Getting Activities</string>
    <string name="YEAR">Year</string>
    <string name="MONTH">Month</string>
    <string name="DAY">Day</string>
    <string name="HOUR">Hour</string>
    <string name="MIN">Minute</string>
    <string name="MIN2">Minute</string>
    <string name="SEC">Second</string>
    <string name="COUNT">Times</string>
    <string name="phone_occupied_time">Using cell phone times:</string>
    <string name="phone_call_time">Call times:</string>
    <string name="phone_switchon_count">Open cell phone times:  </string>
    <string name="phone_threshold_time">presetting times: </string>
    <string name="congratulations">Well down!</string>
    <string name="credit">Achievement:</string>
    <string name="supervision_warn">Your buddy have not join in the Jiejie!</string>
    <string name="control_supervision_text">Allowed to use limited times</string>
    <string name="control_supervision_btn_text">Setting</string>
    <string name="title_activity_supervision_setting">SupervisionSetting</string>
    <string name="supervision_time_setting_warn">Time cannot not be blank</string>
    <string name="supervision_setting_ok">Request monitor success, waiting been approved!</string>
    <string name="supervision_setting_fail">Request monitor failed, please checking your network!</string>
    <string name="settings_time_period_lable1">Setting times</string>
    <string name="control_supervision_mins_lable">Allowed maxmun times to use</string>
    <string name="supervision_my_supervisor_label">Parents</string>
    <string name="supervision_supervised_label">Who monitor me</string>
    <string name="supervision_exceed_day_limit_label">Out of setting time:Lock</string>
    <string name="supervision_exceed_limit_notification">Out of setting time:Notification</string>
    <string name="login_account_update">Account setting</string>
    <string name="status_10">Request monitor</string>
    <string name="status_10_label">Applying monitor</string>
    <string name="status_10_label_father">Applying monitor now</string>
    <string name="status_11">Agree monitor</string>
    <string name="status_11_label">Agree monitor</string>
    <string name="status_11_label_fail">Mnoitor failed, please checking your network!</string>
    <string name="status_12">Refuse monitor</string>
    <string name="status_12_label">Refuse monitor</string>
    <string name="status_20">Request remove monitor</string>
    <string name="status_20_label">Request remove monitor</string>
    <string name="status_20_label_ok">Success send request to remove monitor</string>
    <string name="status_20_label_fail">Failed send request to remove monitor, Please check network!</string>
    <string name="status_21">Agree remove monitor</string>
    <string name="status_21_label_agree">Agree remove monitor</string>
    <string name="status_21_label">Remove monitor</string>
    <string name="status_21_label_fail">Failed remove monitor, please check network!</string>
    <string name="status_22">Refuse remove monoitor</string>
    <string name="status_22_label">Refuse remove monoitor</string>
    <string name="status_30">Request to unlock</string>
    <string name="status_30_label">Request to unlock</string>
    <string name="status_30_label_ok">Success send request to unlock！</string>
    <string name="status_30_label_fail">Failed unlock request, check network!</string>
    <string name="status_31_1">Agree unlock</string>
    <string name="status_31_2">Been locked</string>
    <string name="status_31_3">Been unlock</string>
    <string name="status_31_label">Agree unlock</string>
    <string name="status_31_label_fail">Failed unlock request, check network!</string>
    <string name="status_32">Refuse unlock</string>
    <string name="status_32_label">Refuse unlock</string>
    <string name="status_msg">Appending information(%1$s)</string>
    <string name="status_msg_no">Appending information(none)</string>
    <string name="lock_screen_warning">Your cell phone used(%1$d Mins\nWill out time of your setting(%2$dMins),Jiejie will lock screen after(%3$d),please ask%4$s to unlock your phone! Anyway, it will unlock automatic at tomorrow.</string>
    <string name="lock_screen_warning_me">Yout cell phone has used %1$d mins, will out time of setting %2$d mins.\nPlease relax！</string>
    <string name="lock_screen_warning_me_lock">Yout cell phone has used %1$d mins, will out time of setting %2$d mins.\nJiejie will lock screen after %3$dmins.Anyway, it will unlock automatic at tomorrow.</string>
    <string name="service_is_stop">Please open accessible service, Jiejie will lock screen after %1$d.</string>
    <string name="status_supervision">Monitoring</string>
    <string name="status_supervision_no">Not monitor</string>
    <string name="status_supervision_yes">Monitor</string>
    <string name="status_supervision_son">Been monitor</string>
    <string name="status_friend_label">Start monitor</string>
    <string name="status_supervision_free_label">Monitor</string>
    <string name="status_supervised">Monitor</string>
    <string name="action_supervise">Request monitor</string>
    <string name="action_cancel_supervision">Remove monitor</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_lock">Lock</string>
    <string name="title_activity_supervision_details">Family member status</string>
    <string name="str_password">Password</string>
    <string name="EnterPassword">Input password</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="monitor_daily">Watch today data</string>
    <string name="day_app_percent">Top %1$d to total time ratio</string>
    <string name="day_bar_discript">Top %1$d app used</string>
    <string name="day_pie_center">Each in top %1$d\n to total time ratio</string>
    <string name="day_pie_descript">DOBI Inc product.</string>
    <string name="setting_change_phone">Change cell phone number(Current: %s)</string>
    <string name="setting_binding_phone">Input cell phone number:</string>
    <string name="setting_cancel">Cancel</string>
    <string name="setting_ok">OK</string>
    <string name="setting_nickname_input">Please input nickname:</string>
    <string name="setting_nickname_hint">Hint</string>
    <string name="setting_nickname_modify_success">Success</string>
    <string name="setting_nickname_modify_failed"> Failed</string>
    <string name="setting_userid_label">User id(current: %s )</string>
    <string name="setting_nickname_label">Nickname(current: %s )</string>
    <string name="setting_start_monitor">Accessibility(Open)</string>
    <string name="setting_stop_monitor">Accessibility(Closed)</string>
    <string name="xformathh">h</string>
    <string name="xformatmm">m</string>
    <string name="buddy_day_title"> Have not install Jiejie, No data</string>
    <string name="buddy_day_showdate"> Time statistic-%s</string>
    <string name="bind_phone_number">Phone Number</string>
    <string name="bind_phone_hint">Enter this cell phone number so your family member can find you.</string>
    <string name="bind_phone_hint_bottom">Please enter this cell phone number.</string>
    <string name="bind_phone_next">Next</string>
    <string name="bind_phone_cancel">Cancel</string>
    <string name="family_no_monitor">Do you want apply monitor?</string>
    <string name="family_apply_unlock">Apply remove monitor of %s</string>
    <string name="family_stop_monitor">Do you want stop monitor?</string>
    <string name="family_apply_stop_unlock">Unlock for %s ?</string>
    <string name="family_lock_who">Lock %s ?</string>
    <string name="family_lock_success">Success of lock</string>
    <string name="family_apply_monitor">%s want monitor you, do you agree?</string>
    <string name="family_apply_no_monitor">%s is applying remove monitor</string>
    <string name="family_apply_unlock_who">%s is applying unlock </string>
    <string name="family_add_buddy">Add ?</string>
    <string name="time_limited">Time limited:</string>
    <string name="locked_msg">You exceeded time limited, locked, press the back key to go home</string>
    <string name="family_lock_failed">Cannot lock</string>
    <string name="action_sign_up">Sign up</string>
    <string name="verification_code">Validation</string>
    <string name="get_auth_code">Get validation</string>
    <string name="set_auth_code">Input validation code</string>
</resources>