<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/family_bind_layout">

    <!--Full name -->
    <EditText
        android:id="@+id/register_full_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="@string/register_nickname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:gravity="center|center_vertical|center_horizontal"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="12"
        android:id="@+id/register_full_name"
        android:hint="@string/register_nickname_sample"
        android:editable="true"
        android:layout_toRightOf="@+id/register_full_name_label"
        android:gravity="center|center_vertical|left"
        android:layout_marginTop="10dp" />
    <!--Country code-->
    <EditText
        android:id="@+id/register_country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_china_code"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/register_full_name_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="true"
        android:gravity="center|center_vertical|center_horizontal" />
    <!--Phone number-->
    <EditText
        android:id="@+id/register_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/register_hint_phone_number"
        android:layout_alignTop="@+id/register_country_code"
        android:layout_toRightOf="@+id/register_country_code"
        android:gravity="center|center_vertical|left" />
    <LinearLayout
        android:id="@+id/layout_check_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_number"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
    <!--Verification code-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="false"
        android:ems="5"
        android:layout_below="@+id/register_country_code"
        android:text="@string/verification_code"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/register_veri_code_label"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/register_txt_veri_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/register_veri_code_label"
        android:layout_alignTop="@+id/register_veri_code_label"
        android:ems="7"
        android:hint="@string/set_auth_code" />

    <Button
        android:id="@+id/btnGetAuthCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="GetAuthCode"
        android:layout_toRightOf="@+id/txtAuthCode"
        android:layout_alignTop="@+id/txtAuthCode"
        android:singleLine="true"
        android:text="@string/get_auth_code" />
</LinearLayout>
    <!--Password-->
    <EditText
        android:id="@+id/RegisterPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_password"
        android:editable="true"
        android:gravity="center|center_vertical|center_horizontal"
        android:layout_below="@+id/layout_check_code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/RegisterPasswordEnterEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/EnterPassword"
        android:inputType="textPassword"
        android:gravity="center|center_vertical|left"
        android:layout_alignTop="@+id/RegisterPasswordEditText"
        android:layout_toRightOf="@+id/RegisterPasswordEditText"
        android:layout_toEndOf="@+id/RegisterPasswordEditText" />

    <!--sign up button-->
    <Button
        android:id="@+id/sign_up_button"
        android:layout_below="@+id/RegisterPasswordEnterEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_up"
        android:background="#ff375eb7"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_size" />
</RelativeLayout>