<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/control_supervision">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/control_supervision_text"
        android:id="@+id/supervision_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="102dp"
        android:layout_marginStart="102dp"
        android:textSize="@dimen/title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/supervision_time"
        android:inputType="number"
        android:ems="5"
        android:layout_below="@+id/supervision_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/MIN2" />

    <Button
        android:id="@+id/supervision_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tabDark"
        android:text="@string/family_cancel"
        android:textSize="@dimen/title"
        android:layout_below="@+id/supervision_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/supervision_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tabDark"
        android:text="@string/OK"
        android:textSize="@dimen/title"
        android:layout_below="@+id/supervision_cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>